[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -153,6 +153,8 @@ pluginInfo.unknownPlugin=Desconhecido
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginContinue.label=Continuar permitindo
+pluginContinue.accesskey=C
 
 # in-page UI
 PluginClickToActivate=Ativar o %S
@@ -160,6 +162,8 @@ PluginVulnerableUpdatable=Este plugin é vulnerável e deve ser atualizado.
 PluginVulnerableNoUpdate=Este plugin tem vulnerabilidades de segurança.
 
 # infobar UI
+pluginContinueBlocking.label=Continuar bloqueando
+pluginContinueBlocking.accesskey=b
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 
@@ -546,5 +550,7 @@ customizeTips.tip0.learnMore = Saiba mais
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
+appmenu.restartNeeded.description = Reiniciar o %S para aplicar as atualizações
+appmenu.updateFailed.description = Falha na atualização em segundo plano. Por favor, baixe a atualização
 appmenu.restartBrowserButton.label = Reiniciar o %S
 appmenu.downloadUpdateButton.label = Receber atualização
