--- a/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -103,6 +103,8 @@ panic-button.label = Esquecer
 panic-button.tooltiptext = Esquecer uma parte de seus dados pessoais
 
 web-apps-button.label = Aplicativos
+web-apps-button.tooltiptext = Descubra aplicativos
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.tooltiptext = Abrir WebIDE
