--- a/pt-BR/browser/chrome/browser/downloads/downloads.properties
+++ b/pt-BR/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,9 @@ stateDirty=Bloqueado: pode conter vírus ou aplicativos espiões
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Este arquivo contém um vírus ou malware.
+blockedPotentiallyUnwanted=Este arquivo pode danificar seu computador.
+blockedUncommon=Pode não ser seguro abrir este arquivo.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -54,6 +57,7 @@ stateDirty=Bloqueado: pode conter vírus ou aplicativos espiões
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockTypeMalware=Este arquivo contém um vírus ou outro malware que irá danificar seu computador.
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
