--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -62,6 +62,7 @@ retry_button=Tentar de novo
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_button=Email
 copy_url_button=Copiar
+copy_url_button2=Copiar link
 copied_url_button=Copiado!
 
 panel_footer_signin_or_signup_link=Entre ou cadastre-se
@@ -279,13 +280,18 @@ feedback_rejoin_button=Reconectar
 feedback_report_user_button=Reportar usuário
 
 help_label=Ajuda
+tour_label=Tour
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
 rooms_leave_button_label=Sair
+rooms_list_copy_url_tooltip=Copiar link
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_delete_tooltip=Excluir conversa
 rooms_list_deleteConfirmation_label=Tem certeza?
+rooms_panel_title=Escolha uma conversa ou comece uma nova
+rooms_room_full_label=Já há duas pessoas nesta conversa.
