--- a/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
@@ -34,6 +34,7 @@ openFile.failed=Falha ao abrir o arquivo.
 
 # LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
 # open fails.
+importFromFile.convert.failed=Falha ao converter arquivo para Unicode de %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
