[S] security: Bug 1068949 - Send SHA-1 deprecation warnings in to the web console

--- a/it/dom/chrome/security/security.properties
+++ b/it/dom/chrome/security/security.properties
@@ -3,6 +3,7 @@ BlockMixedActiveContent = Bloccato il caricamento di contenuto misto attivo (mix
 CrossSiteRequestBlocked = Bloccata richiesta multiorigine (cross-origin): il criterio di corrispondenza dell’origine non consente la lettura della risorsa remota da %1$S. È possibile risolvere il problema spostando la risorsa sullo stesso dominio o attivando CORS.
 InvalidSTSHeaders = Per questo sito è stato specificato un header Strict-Transport-Security non valido.
 InvalidPKPHeaders = Il sito ha specificato un header Public-Key-Pins non valido.
+SHA1Sig = Questo sito utilizza un certificato SHA-1. Si consiglia di utilizzare certificati basati su algoritmi di firma con funzioni hash più robuste di SHA-1.
 InsecurePasswordsPresentOnPage = Sono presenti campi password in una pagina con connessione non sicura (http://). Si tratta di un rischio per la sicurezza in quanto consente il furto delle credenziali di accesso inserite.
 InsecureFormActionPasswordsPresent = Sono presenti campi password in un modulo che trasmette i dati su connessione non sicura (http://). Si tratta di un rischio per la sicurezza in quanto consente il furto delle credenziali di accesso inserite.
 InsecurePasswordsPresentOnIframe = Sono presenti campi password in un iframe con connessione non sicura (http://). Si tratta di un rischio per la sicurezza in quanto consente il furto delle credenziali di accesso inserite.
