Rewording some strings

--- a/rm/browser/chrome/browser/browser.properties
+++ b/rm/browser/chrome/browser/browser.properties
@@ -435,7 +435,7 @@ syncPromoNotification.addons-sync-disabled.description=Ti pos utilisar tes conto
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S trametta automaticamain tschertas datas a %2$S per meglierar il program.
-dataReportingNotification.button.label  = Tscherner tge ch'jau vi cundivider
+dataReportingNotification.button.label  = Tscherner tge cundivider
 dataReportingNotification.button.accessKey  = C
 
 # Webapps notification popup
@@ -537,9 +537,9 @@ getUserMedia.stopSharing.accesskey = h
 
 # Mixed Content Blocker Doorhanger Notification
 # LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S ha bloccà cuntegn che n'è betg segir.
-mixedContentBlocked.keepBlockingButton.label = Cuntinuar da bloccar
-mixedContentBlocked.keepBlockingButton.accesskey = B
+mixedContentBlocked.message = %S ha bloccà cuntegn betg segir.
+mixedContentBlocked.keepBlockingButton.label = Vinavant bloccar
+mixedContentBlocked.keepBlockingButton.accesskey = b
 mixedContentBlocked.unblock.label = Deactivar la protecziun sin questa pagina
 mixedContentBlocked.unblock.accesskey = D
 
