--- a/rm/browser/chrome/browser/preferences/preferences.properties
+++ b/rm/browser/chrome/browser/preferences/preferences.properties
@@ -133,8 +133,8 @@ syncUnlink.label=Quest apparat na vegn betg pli associà cun tes conto da Sync. 
 syncUnlinkConfirm.label=Distatgar
 
 # LOCALIZATION NOTE (featureEnableRequiresRestart, featureDisableRequiresRestart, restartTitle): %S = brandShortName
-featureEnableRequiresRestart=%S sto vegnir reavià per activar questa funcziun.
-featureDisableRequiresRestart=%S sto vegnir reavià per deactivar questa funcziun.
+featureEnableRequiresRestart=%S sto reaviar per activar questa funcziun.
+featureDisableRequiresRestart=%S sto reaviar per deactivar questa funcziun.
 shouldRestartTitle=Reaviar %S
 
 ###Preferences::Sync::Firefox Accounts
