--- a/rm/dom/chrome/dom/dom.properties
+++ b/rm/dom/chrome/dom/dom.properties
@@ -85,9 +85,9 @@ MediaBufferSourceNodeResampleOutOfMemory=Betg avunda memoria per tastar danovama
 # LOCALIZATION NOTE: Do not translate decodeAudioData.
 MediaDecodeAudioDataUnknownContentType=Il buffer surdà a decodeAudioData cuntegna in tip da cuntegn nunenconuschent.
 # LOCALIZATION NOTE: Do not translate decodeAudioData.
-MediaDecodeAudioDataUnknownError=Ina errur nunenconuschenta è capitada durant elavurar decodeAudioData.
+MediaDecodeAudioDataUnknownError=Ina errur nunenconuschenta è succedida cun elavurar decodeAudioData.
 # LOCALIZATION NOTE: Do not translate decodeAudioData.
-MediaDecodeAudioDataInvalidContent=Il buffer surdà a decodeAudioData cuntegna datas nunvalidas che na pon betg vegnir decodadas cun success.
+MediaDecodeAudioDataInvalidContent=Il buffer surdà a decodeAudioData cuntegna datas nunvalidas impussiblas da decodar.
 # LOCALIZATION NOTE: Do not translate decodeAudioData.
 MediaDecodeAudioDataNoAudio=Il buffer surdà a decodeAudioData na cuntegna betg audio.
 MediaLoadExhaustedCandidates=Betg reussì da chargiar ina da las resursas disponiblas. Pussà il chargiar da medias.
@@ -113,7 +113,7 @@ MutationEventWarning='Mutation Events' na duess betg pli vegnir utilisà. Utilis
 # LOCALIZATION NOTE: Do not translate "Components"
 ComponentsWarning=L'object 'Components' na duess betg pli vegnir utilisà. El vegn prest allontanà.
 PluginHangUITitle=Attenziun: Plug-in na respunda betg
-PluginHangUIMessage=%S è forsa occupà u ch'el na respunda betg pli. Ti pos ussa interrumper il plug-in u spetgar e guardar sch'il plug-in terminescha.
+PluginHangUIMessage=%S è eventualmain occupà u ch'el na respunda betg pli. Ti pos ussa interrumper il plug-in u spetgar e guardar sch'il plug-in terminescha.
 PluginHangUIWaitButton=Cuntinuar
 PluginHangUIStopButton=Interrumper il plug-in
 # LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
