--- a/rm/dom/chrome/layout/css.properties
+++ b/rm/dom/chrome/layout/css.properties
@@ -134,7 +134,7 @@ PESupportsConditionStartEOF2='not', '(', u ina funcziun
 PESupportsConditionInParensEOF=')'
 PESupportsConditionNotEOF='not'
 PESupportsWhitespaceRequired=Spetgà spazis vids suenter 'not', 'and', u 'or'.
-PESupportsConditionExpectedOpenParenOrFunction=Spetgà '(' u ina funcziun cun elavurar las cundiziuns da sustegn, ma chattà '%1$S'..
+PESupportsConditionExpectedOpenParenOrFunction=Spetgà '(' u ina funcziun cun elavurar las cundiziuns da sustegn, ma chattà '%1$S'.
 PESupportsConditionExpectedCloseParen=Spetgà ')' cun elavurar las cundiziuns da sustegn, ma chattà '%1$S'.
 PESupportsConditionExpectedStart2=Spetgà 'not', '(' u ina funcziun cun elavurar las cundiziuns da sustegn, ma chattà '%1$S'.
 PESupportsConditionExpectedNot=Spetgà 'not' cun elavurar las cundiziuns da sustegn, ma chattà '%1$S'.
