--- a/rm/toolkit/chrome/global/aboutTelemetry.properties
+++ b/rm/toolkit/chrome/global/aboutTelemetry.properties
@@ -5,7 +5,7 @@
 # Note to translators:
 # - %1$S will be replaced by brandFullName
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
-pageSubtitle = Questa pagina mussa datas davart la prestaziun, la hardware, l'utilisaziun ed la persunalisaziun rimnadas da la telemetria. Questa infurmaziun vegn tramessa a %1$S per meglierar %2$S.
+pageSubtitle = Questa pagina mussa las datas davart la prestaziun, la hardware, l'utilisaziun e la persunalisaziun rimnadas da la telemetria. Questa infurmaziun vegn tramessa a %1$S per meglierar %2$S.
 
 slowSqlMain = Statements da SQL plauns en il thread principal
 
@@ -24,7 +24,7 @@ chrome-hangs-title = Rapport da bloccada #%1$S (%2$S secundas)
 
 # Note to translators:
 # - The %1$S will be replaced with the number of the late write
-late-writes-title = Inscripziun retardada #%1$S
+late-writes-title = Endataziun retardada #%1$S
 
 stackTitle = Stack:
 
