--- a/rm/browser/pdfviewer/viewer.properties
+++ b/rm/browser/pdfviewer/viewer.properties
@@ -135,7 +135,7 @@ page_scale_actual=Grondezza actuala
 loading_error_indicator=Errur
 loading_error=Ina errur è cumparida cun chargiar il PDF.
 invalid_file_error=Datoteca PDF nunvalida u donnegiada.
-missing_file_error=Datoteca PDF manconta.
+missing_file_error=Datoteca PDF manca.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
@@ -149,5 +149,5 @@ password_cancel=Interrumper
 
 printing_not_supported=Attenziun: Il stampar na funcziunescha anc betg dal tut en quest navigatur.
 printing_not_ready=Attenziun: Il PDF n'è betg chargià cumplettamain per stampar.
-web_fonts_disabled=Scrittiras dal web èn deactivadas: impussibel dad utilisar las scrittiras integradas en il PDF.
+web_fonts_disabled=Scrittiras da web èn deactivadas: impussibel dad utilisar las scrittiras integradas en il PDF.
 document_colors_disabled=Documents da PDF na pon betg utilisar lur atgnas colurs: \'Permetter a las paginas d'utilisar lur atgnas colurs empè da las colurs tschernidas survart\' è deactivà en il navigatur.
