[S] browser: Bug 1060093 - Implement toolbox to debug chrome of the content process

--- a/it/browser/chrome/browser/devtools/toolbox.properties
+++ b/it/browser/chrome/browser/devtools/toolbox.properties
@@ -20,3 +20,4 @@ browserConsoleCmd.commandkey = j
 pickButton.tooltip = Seleziona un elemento nella pagina
 options.darkTheme.label = Tema scuro
 options.lightTheme.label = Tema chiaro
+toolbox.noContentProcess.message = Nessun processo per i contenuti in esecuzione.
