[Q] toolkit: "content process" consistency

--- a/it/toolkit/chrome/global/aboutSupport.properties
+++ b/it/toolkit/chrome/global/aboutSupport.properties
@@ -39,5 +39,5 @@ webglRenderer = Rendering WebGL
 minLibVersions = Versione minima prevista
 loadedLibVersions = Versione in uso
 hasSeccompBPF = Seccomp-BPF (filtro chiamate di sistema)
-canSandboxContent = Sandbox processo contenuti
+canSandboxContent = Sandbox processo per i contenuti
 canSandboxMedia = Sandbox plugin multimediali
