--- a/it/browser/chrome/browser/devtools/webide.properties
+++ b/it/browser/chrome/browser/devtools/webide.properties
@@ -43,3 +43,4 @@ status_valid = VALIDO
 status_warning = AVVISI
 status_error = ERRORI
 status_unknown = SCONOSCIUTO
+devicepreferences_reset_default = Ripristina predefiniti
