Devtools updated once more...

--- a/es-CL/browser/chrome/browser/devtools/toolbox.properties
+++ b/es-CL/browser/chrome/browser/devtools/toolbox.properties
@@ -16,3 +16,4 @@ browserConsoleCmd.commandkey=j
 pickButton.tooltip=Tomar un elemento de la página
 options.darkTheme.label=Tema oscuro
 options.lightTheme.label=Tema claro
+toolbox.noContentProcess.message=No hay procesos de contenido ejecutándose
