--- a/es-CL/browser/chrome/browser/devtools/webide.properties
+++ b/es-CL/browser/chrome/browser/devtools/webide.properties
@@ -68,3 +68,6 @@ status_valid=VALIDO
 status_warning=ADVERTENCIAS
 status_error=ERRORES
 status_unknown=DESCONOCIDO
+
+# Preferences
+devicepreferences_reset_default=Reinicia a predeterminados
