Cajita de arena

--- a/es-CL/dom/chrome/security/security.properties
+++ b/es-CL/dom/chrome/security/security.properties
@@ -5,6 +5,7 @@ BlockMixedActiveContent = Se ha bloqueado la carga del contenido activo mixto "%
 CrossSiteRequestBlocked=Solicitud de origen cruzado denegada: La misma política de origen no permite la lectura de la fuente remota en %1$S. Esto puede ser solucionado moviendo el recurso al mismo dominio o activando CORS.
 InvalidSTSHeaders=El sitio especificó una cabecera de Strict-Transport-Security inválida.
 InvalidPKPHeaders=El sitio especificó una cabecera Public-Key-Pins inválida.
+SHA1Sig=Este sitio hace uso de un certificado SHA-1; se recomienda que use certificados con algoritmos de firma que usen funciones hash más fuertes que SHA-1.
 InsecurePasswordsPresentOnPage=Campos de contraseña presentes en una página insegura (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 InsecureFormActionPasswordsPresent=Campos de contraseña presentes en un formulario con una acción de formulario insegura (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe inseguro (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
