--- a/es-CL/toolkit/chrome/global/aboutSupport.properties
+++ b/es-CL/toolkit/chrome/global/aboutSupport.properties
@@ -38,3 +38,6 @@ isGPU2Active = GPU #2 Activa
 webglRenderer = Procesador WebGL
 minLibVersions = Versión mínima esperada
 loadedLibVersions = Versión en uso
+hasSeccompBPF = Seccomp-BPF (Filtrado de llamadas del sistema)
+canSandboxContent = Aislamiento de procesos de contenido
+canSandboxMedia = Aislamiento de complementos de medios
