Bug 1077057 - Add Linux sandboxing info to about:support

--- a/sk/toolkit/chrome/global/aboutSupport.properties
+++ b/sk/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,7 @@ webglRenderer = Vykresľovanie WebGL
 
 minLibVersions = Očakávaná minimálna verzia
 loadedLibVersions = Používaná verzia
+
+hasSeccompBPF = Seccomp-BPF (filtrovanie systémových volaní)
+canSandboxContent = Sandboxing procesov obsahu
+canSandboxMedia = Sandboxing zásuvných modulov médií
