--- a/sk/dom/chrome/security/security.properties
+++ b/sk/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Žiadosť Cross-Origin zablokovaná: zásada rovnakého 
 InvalidSTSHeaders=Stránka má definovanú neplatnú hlavičku Strict-Transport-Security.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Stránka má definovanú neplatnú hlavičku Public-Key-Pins.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Táto stránka používa certifikát SHA-1. Odporúča sa používať certifikáty, ktoré na podpisovanie používajú silnejšie hešovacie funkcie ako SHA-1.
 InsecurePasswordsPresentOnPage=Polia s heslami sú umiestnené na nezabezpečenej (http://) stránke. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 InsecureFormActionPasswordsPresent=Polia s heslami sú umiestnené vo formulári, ktorý má definovanú nezabezpečenú (http://) akciu formulára. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 InsecurePasswordsPresentOnIframe=Polia s heslami sú umiestnené na nezabezpečenom (http://) rámci iframe. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
