Bug 982484 - Device preferences support

--- a/sk/browser/chrome/browser/devtools/webide.properties
+++ b/sk/browser/chrome/browser/devtools/webide.properties
@@ -72,3 +72,6 @@ status_valid=VALIDNÝ
 status_warning=UPOZORNENIA
 status_error=CHYBY
 status_unknown=NEZNÁMY
+
+# Preferences
+devicepreferences_reset_default=Nastaviť na predvolené
