Bug 1060093 - Implement toolbox to debug chrome of the content process

--- a/sk/browser/chrome/browser/devtools/toolbox.properties
+++ b/sk/browser/chrome/browser/devtools/toolbox.properties
@@ -78,3 +78,8 @@ options.darkTheme.label=Tmavá téma
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Svetlá téma
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Nie je spustený žiadny proces s obsahom.
