--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -111,5 +111,6 @@ web-apps-button.tooltiptext = Découvrir des applications
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Ouvrir WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Ouvrir WebIDE (%S)
