--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = Quitter %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Quitter %1$S (%2$S)
 
-loop-call-button2.label = Démarrer une conversation
-loop-call-button2.tooltiptext = Démarrer une conversation
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Démarrer une conversation
 
 social-share-button.label = Partager cette page
 social-share-button.tooltiptext = Partager cette page
