[browser]  Bug 1086958: re-add default browser strings from bug 951627

--- a/fr/browser/chrome/browser/shellservice.properties
+++ b/fr/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,13 @@ setDefaultBrowserNotNow.accesskey  = P
 setDefaultBrowserNever.label       = Ne plus me demander
 setDefaultBrowserNever.accesskey   = N
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Navigateur par défaut
+setDefaultBrowserMessage=%S n'est pas votre navigateur par défaut. Voulez-vous le définir en tant que navigateur par défaut ?
+setDefaultBrowserDontAsk=Toujours effectuer cette vérification au démarrage de %S.
+
 desktopBackgroundLeafNameWin=Fond d'écran.bmp
 DesktopBackgroundDownloading=Enregistrement de l'image…
 DesktopBackgroundSet=Choisir comme fond d'écran
