[browser] WebIDE update

--- a/fr/browser/chrome/browser/devtools/webide.properties
+++ b/fr/browser/chrome/browser/devtools/webide.properties
@@ -71,3 +71,6 @@ status_valid=VALIDE
 status_warning=AVERTISSEMENTS
 status_error=ERREURS
 status_unknown=INCONNU
+
+# Preferences
+devicepreferences_reset_default=Réinitialiser
