[browser] Bug 1060093 - Implement toolbox to debug chrome of the content process

--- a/fr/browser/chrome/browser/devtools/toolbox.properties
+++ b/fr/browser/chrome/browser/devtools/toolbox.properties
@@ -78,3 +78,8 @@ options.darkTheme.label=Thème sombre
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Thème clair
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Aucun processus de contenu n'est en cours d'exécution.
