2 new strings from Jakob

--- a/da/browser/chrome/browser/newTab.properties
+++ b/da/browser/chrome/browser/newTab.properties
@@ -5,6 +5,31 @@
 newtab.pin=Fastgør denne side til dens nuværende position
 newtab.unpin=Frigør denne side
 newtab.block=Fjern denne side
-newtab.show=Vis siden ved nyt faneblad
-newtab.hide=Skjul siden ved nyt faneblad
-newtab.sponsored=Vis information om sponsorerede fliser
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored 
+# and enhanced tiles on the same line as the tile's title, so prefer short 
+# strings to avoid overlap. This string should be uppercase.  
+newtab.sponsored.button=SPONSORERET
+
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by 
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.  
+newtab.sponsored.explain=Denne flise vises på vegne af en af Mozillas partnere. Du kan fjerne den når som helst ved at klikke på knappen %1$S. %2$S
+
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by 
+# the gear icon used to customize the new tab window. %2$S will be replaced by 
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=En af Mozillas partnere har ændret denne flise visuelt ved at erstatte skærmbilledet. Du kan slå ændrede fliser fra ved at klikke på knappen %1$S. %2$S
+
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Når du åbner et nyt faneblad vil du se fliser fra ofte besøgte websteder sammen med nogle fliser, som vi tror vil være interessante for dig. Nogle af disse fliser kan være sponsorerede af Mozillas partnere. Vi vil altid vise dig, når en flise er sponsoreret. %1$S
+
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by 
+# active link using string newtab.privacy.link as text.  
+newtab.intro.paragraph2=For at kunne levere denne service indsamler Mozilla information om din brug af fliserne til analyse-formål i overensstemmelse med vores %1$S.
+
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by 
+# the gear icon used to customize the new tab window.  
+newtab.intro.paragraph3=Du kan slå flise-funktionen fra ved at klikke på knappen %1$S.  
+newtab.learn.link=Læs mere 
+newtab.privacy.link=privatlivspolitik 
