--- a/da/browser/chrome/browser/devtools/webide.properties
+++ b/da/browser/chrome/browser/devtools/webide.properties
@@ -5,7 +5,7 @@
 title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
-
+runtimeButton_label=Vælg runtime
 projectButton_label=Åbn app
 
 mainProcess_label=Hovedproces
