--- a/da/browser/chrome/browser/webrtcIndicator.properties
+++ b/da/browser/chrome/browser/webrtcIndicator.properties
@@ -16,6 +16,7 @@ webrtcIndicator.sharingApplication.tooltip = En applikation bliver delt. Klik fo
 webrtcIndicator.sharingScreen.tooltip = Din skærm bliver delt. Klik for at kontrollere deling.
 webrtcIndicator.sharingWindow.tooltip = Et vindue bliver delt. Klik for at kontrollere deling.
 
+
 # LOCALIZATION NOTE : The following strings are only used on Mac for
 # menus attached to icons near the clock on the mac menubar.
 
@@ -27,16 +28,25 @@ webrtcIndicator.sharingApplicationWith.menuitem = Deler en applikation med "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Deler skærm med "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Deler et vindue med "%S"
 webrtcIndicator.controlSharing.menuitem = Kontroller deling
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Deler kamera med #1 faneblad;Deler kamera med #1 faneblade
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Deler mikrofon med #1 faneblad;Deler mikrofon med #1 faneblade
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Deler en applikation med #1 faneblad; Deler en applikation med #1 faneblade
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingScreenWithNTabs.menuitem = Deler skærm med #1 faneblad;Deler skærm med #1 faneblade
 # LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-
-webrtcIndicator.sharingWindowWithNTabs.menuitem = Deler en applikation med #1 faneblad; Deler en applikation med #1 faneblade
-webrtcIndicator.sharingScreenWithNTabs.menuitem = Deler skærm med #1 faneblad;Deler skærm med #1 faneblade
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Deler et vindue med #1 faneblad;Deler vinduer med #1 faneblade
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
