--- a/de/browser/chrome/browser/pageInfo.properties
+++ b/de/browser/chrome/browser/pageInfo.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-pageInfo.page.title=Seiteninformation - %S
-pageInfo.frame.title=Frame-Information - %S
+pageInfo.page.title=Seiteninformationen - %S
+pageInfo.frame.title=Frame-Informationen - %S
 
 noPageTitle=Unbenannte Seite:
 pageTitle=%S:
