No bug - Use always plural 'Frame-Informationen'. r=me

--- a/de/browser/chrome/browser/pageInfo.properties
+++ b/de/browser/chrome/browser/pageInfo.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 pageInfo.page.title=Seiteninformationen - %S
-pageInfo.frame.title=Frame-Information - %S
+pageInfo.frame.title=Frame-Informationen - %S
 
 noPageTitle=Unbenannte Seite:
 pageTitle=%S:
