--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -432,7 +432,7 @@ syncPromoNotification.addons-sync-disabled.description=Za sinhronizacijo dodatko
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S samodejno pošilja nekatere podatke organizaciji %2$S, zato da lahko izboljšamo vašo izkušnjo.
-dataReportingNotification.button.label  = Izberi, kaj želim pošiljati
+dataReportingNotification.button.label  = Izberite, kaj želite pošiljati
 dataReportingNotification.button.accessKey  = I
 
 # Webapps notification popup
