New strings for Aurora 1:3

--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Vis '%S'
 badContentBlocked.blocked.message=%S blokerer indhold på denne side.
 badContentBlocked.notblocked.message=%S blokerer ikke indhold på denne side.
 
-# missing plugin installer
-installPlugin.message = Vil du installere det plugin, der er påkrævet for at vise medieindholdet på denne side?
-installPlugin.button.label=Installer %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Spørg ikke igen
-installPlugin.ignoreButton.accesskey=N
-
 crashedpluginsMessage.title=Der opstod en fejl i plugin'et %S.
 crashedpluginsMessage.reloadButton.label=Genindlæs side
 crashedpluginsMessage.reloadButton.accesskey=G
@@ -560,15 +553,20 @@ getUserMedia.continueSharing.accesskey = F
 getUserMedia.stopSharing.label = Stop med at dele
 getUserMedia.stopSharing.accesskey = S
 
-getUserMedia.sharingMenu.label = Faneblade der dele enheder
+getUserMedia.sharingMenu.label = Faneblade der deler enheder
 getUserMedia.sharingMenu.accesskey = n
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera og mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon og program)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon og skærm)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon og vindue)
+getUserMedia.sharingMenuCameraApplication = %S (kamera og program)
+getUserMedia.sharingMenuCameraScreen = %S (kamera og skærm)
+getUserMedia.sharingMenuCameraWindow = %S (kamera og vindue)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon og program)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon og skærm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon og vindue)
@@ -596,9 +597,19 @@ slowStartup.helpButton.accesskey = L
 slowStartup.disableNotificationButton.label = Fortæl mig ikke dette igen
 slowStartup.disableNotificationButton.accesskey = F
 
+
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
 customizeTips.tip0 = %1$S: Du kan tilpasse %2$S til at opføre sig som du vil. Træk blot nogle af elementerne ovenfor til menuen eller værktøjslinjen. %3$S om at tilpasse %2$S.
 customizeTips.tip0.hint = Hint
 customizeTips.tip0.learnMore = Læs mere
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Genstart %S for at anvende ændringerne
+appmenu.updateFailed.description = Opdatering i baggrunden slog fejl. Hent opdateringen i stedet. 
+appmenu.restartBrowserButton.label = Genstart %S
+appmenu.downloadUpdateButton.label = Hent opdatering
