--- a/da/browser/pdfviewer/viewer.properties
+++ b/da/browser/pdfviewer/viewer.properties
@@ -32,8 +32,8 @@ zoom_in_label=Zoom ind
 zoom.title=Zoom
 print.title=Udskriv
 print_label=Udskriv
-presentation_mode.title=Skift til præsentations-tilstand
-presentation_mode_label=Præsentations-tilstand
+presentation_mode.title=Skift til fuldskærmsvisning
+presentation_mode_label=Fuldskærmsvisning
 open_file.title=Åbn fil
 open_file_label=Åbn
 download.title=Hent
