--- a/da/browser/pdfviewer/viewer.properties
+++ b/da/browser/pdfviewer/viewer.properties
@@ -42,8 +42,8 @@ bookmark.title=Aktuel visning (kopier eller åbn i et nyt vindue)
 bookmark_label=Aktuel visning
 
 # Secondary toolbar and context menu
-tools.title=Værktøj
-tools_label=Værktøj
+tools.title=Funktioner
+tools_label=Funktioner
 first_page.title=Gå til første side
 first_page.label=Gå til første side
 first_page_label=Gå til første side
