--- a/nl/toolkit/chrome/global/aboutSupport.properties
+++ b/nl/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL-renderer
 
 minLibVersions = Verwachte minimale versie
 loadedLibVersions = Gebruikte versie
+
+hasSeccompBPF = Seccomp-BPF (System Call Filtering)
+canSandboxContent = Content Process Sandboxing
+canSandboxMedia = Media Plugin Sandboxing
