Bug 1086252 - Show stable client id in about:telemetry

--- a/nl/toolkit/chrome/global/aboutTelemetry.properties
+++ b/nl/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Deze pagina toont de gegevens over prestaties, hardware, gebruik en aanpassingen die door Telemetry zijn verzameld. Deze gegevens worden naar %1$S verzonden om %2$S te helpen verbeteren.
 
+generalDataHeadingName = Naam
+
+generalDataHeadingValue = Waarde
+
 slowSqlMain = Trage SQL-statements op hoofdthread
 
 slowSqlOther = Trage SQL-statements op helpthreads
