--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -325,7 +325,7 @@ remoteNotificationMessage=Luisteren op poort %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
 remoteStartNotificationTitle=Debugging voor %S activeren
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
-remoteStartNotificationMessage=Raak aan om remote debugger te activeren
+remoteStartNotificationMessage=Raak aan om externe debugger te activeren
 
 # Helper apps
 helperapps.open=Openen
@@ -356,7 +356,6 @@ getUserMedia.videoSource.default = Camera %S
 getUserMedia.videoSource.frontCamera = Camera aan voorzijde
 getUserMedia.videoSource.backCamera = Camera aan achterzijde
 getUserMedia.videoSource.none = Geen video
-getUserMedia.videoSource.prompt = Te gebruiken camera
 getUserMedia.videoSource.tabShare = Tabblad om te streamen kiezen
 getUserMedia.videoSource.prompt = Videobron
 getUserMedia.audioDevice.default = Microfoon %S
@@ -367,8 +366,8 @@ getUserMedia.sharingMicrophone.message2 = Microfoon is aan
 getUserMedia.sharingCameraAndMicrophone.message2 = Camera en microfoon zijn aan
 
 #Reader mode
-readerMode.enter = Leesmodus betreden
-readerMode.exit = Leesmodus verlaten
+readerMode.enter = Lezermodus betreden
+readerMode.exit = Lezermodus verlaten
 
 #Open in App
 openInApp.pageAction = Openen in app
@@ -393,4 +392,4 @@ feedHandler.subscribeWith=Abonneren met
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%1$S wordt niet meer ondersteund. Gebruik in plaats daarvan %2$S
+nativeWindow.deprecated=%S wordt niet meer ondersteund. Gebruik in plaats daarvan %S
