--- a/nl/mobile/android/chrome/webapp.properties
+++ b/nl/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 update mislukt;#1 updates mislukt
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Ophalen van update voor %1$S mislukt;Ophalen van updates voor %1$S mislukt
 
-webappsDisabled=Intallatie van apps is uitgeschakeld
+webappsDisabled=Het installeren van apps is uitgeschakeld
