[ne-NP] update from Pootle (firefox)

--- a/ne-NP/browser/chrome/browser/devtools/netmonitor.properties
+++ b/ne-NP/browser/chrome/browser/devtools/netmonitor.properties
@@ -61,6 +61,7 @@ cookiesFilterText=कुकिज फिल्टर गर्नुहोस्
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
 # in the network details params tab identifying the form data.
+paramsFormData=फारम डाटा
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
 # in the network details params tab identifying the request payload.
