--- a/ne-NP/browser/chrome/browser/tabview.properties
+++ b/ne-NP/browser/chrome/browser/tabview.properties
@@ -2,6 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+tabview.button.searchTabs=ट्याब समूहहरूको खोजी गर्नुहोस्
+tabview.button.exitTabGroups=ट्याब समूहहरू बन्द गर्नुहोस्
 tabview.groupItem.defaultName=Name this tab group…
 tabview.groupItem.closeGroup=समूहलाई बन्द गर्नुहोस्
 tabview.groupItem.undoCloseGroup=बन्द समूहलाई पूर्वस्थितिमा फर्काउनुहोस्
