[S] browser, toolkit: Bug 1093595 - Change strings to add a description about weak encryption

--- a/it/browser/chrome/browser/browser.properties
+++ b/it/browser/chrome/browser/browser.properties
@@ -149,7 +149,7 @@ identity.identified.verifier = Verificato da: %S
 identity.identified.verified_by_you = È stata aggiunta un’eccezione di sicurezza per questo sito.
 identity.identified.state_and_country = %S, %S
 identity.encrypted2 = La connessione con questo sito web è sicura.
-identity.mixed_display_loaded = La connessione con questo sito non è completamente sicura in quanto presenta elementi non cifrati (ad esempio immagini).
+identity.broken_loaded = La connessione con questo sito non è completamente sicura in quanto la pagina include elementi non cifrati (ad esempio immagini) oppure il livello di cifratura è troppo basso.
 identity.mixed_active_loaded2 = Questo sito web presenta contenuti interattivi non cifrati (ad esempio script). Altre persone potrebbero visualizzare le informazioni in transito o modificare il funzionamento del sito.
 identity.unencrypted = La connessione con questo sito web non è cifrata.
 identity.unknown.tooltip = Questo sito web non fornisce informazioni relative all’identità.
