--- a/it/security/manager/chrome/pippki/pippki.properties
+++ b/it/security/manager/chrome/pippki/pippki.properties
@@ -53,7 +53,7 @@ pageInfo_EncryptionWithBitsAndProtocol = Connessione cifrata (%1$S, chiavi a %2$
 pageInfo_Privacy_Encrypted1 = La pagina visualizzata è stata cifrata prima della trasmissione via Internet.
 pageInfo_Privacy_Encrypted2 = La cifratura rende difficile osservare le informazioni scambiate tra computer a persone non autorizzate. È quindi improbabile che qualcuno sia riuscito a leggere il contenuto di questa pagina durante il transito attraverso la rete.
 pageInfo_MixedContent = Connessione parzialmente cifrata
-pageInfo_Privacy_Mixed1 = Parte della pagina che si sta visualizzando non è stata cifrata durante la trasmissione su Internet.
+pageInfo_Privacy_Broken1 = Alcuni elementi della pagina che si sta visualizzando non sono stati cifrati prima della trasmissione via Internet, oppure il livello di cifratura è troppo basso.
 certDetails = Certificato:
 notPresent = <non incluso nel certificato>
 unknownIssuer = <emittente sconosciuto>
